[package]
name = "strberus"
version = "0.1.0"
edition = "2021"
description = """
strberus is the gatekeeper of strings.

It validates that input strings meet the required specifications.
"""
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
regex = "1.6.0"
